# peers-touch

./: .gitignore  .golangci.yml  DEVOLOPMENT_DAILY.zh.md  FRIEND_RELATIONSHIP_DESIGN.md  Makefile  PROJECT.md  README.md  README.v2.zh.md  README.zh.md  TASK.zh.md  TESTING.md  go.work  go.work.sum  melos.yaml  package.json  pnpm-workspace.yaml  task.md  test_actor_list.sh  test_proto_api.sh  test_proto_final.sh
.githooks/: pre-commit
.prompts/: README.md  README.zh.md
.prompts/00-META/: CHANGELOG.md  GLOSSARY.md  INDEX.md
.trae/: login_security_fix_summary.md  login_settings_feature.md  profile_upload_fix_summary.md
apps/desktop/: .gitignore  (+4 more)
client/: .gitignore  analysis_options.yaml
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
docs/: APPLET_ARCHITECTURE.md  DESKTOP_TAURI_MODEL_PROTOCOL_UNIFICATION_TASK.zh.md  DESKTOP_TAURI_PROTOCOL_MAPPING_MATRIX.zh.md  DESKTOP_TAURI_RUST_AGENT_PROMPTS.zh.md  DESKTOP_TAURI_RUST_PARALLEL_PLAN.zh.md
mobile/: .flutter-plugins-dependencies  README.md
model/: .protoc-gen-dart-wrapper  README.md  build.ps1  build.sh  build_fixed.ps1
qa/: QUICKSTART.zh.md  README.zh.md  STRUCTURE.zh.md
scripts/: README.md  dev-clean.sh  dev-desktop-mobile.sh  dev-full-stack.sh  dev-station.sh  dev-two-desktops.sh  run_all_tests.sh
station/: .gitignore  .golangci.yml  Dockerfile.test  README.md  go.mod
tooling/: README.md  workspace.manifest.json
tools/: check-go-style.sh  format-go.sh
(+2253 files in other folders)
