[package]
name = "peers-touch-desktop"
version = "0.1.0"
description = "Peers Touch desktop shell"
authors = ["peers-touch"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
